@@ -1,3 +1,7 @@
+2010-01-31  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* photoliststore.py (RecentQueue.pop): Delete old cache files.
+
 2010-01-28  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* preferences.py, gphotoframe.glade: Added GUI for preferences of
